Fix cards so that they are aligned and sized correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,12 @@
 }
 
 .number-card {
-  height: 20em;
+  height: 12em;
   padding: 5px;
 }
 
 p {
-  font-size: 10em;
+  font-size: 8em;
 }
 
 #report-screen {
